@@ -9,6 +9,9 @@ Version 2.5
  * If no qcow image info has been created during backup, issue warning
  during restore that default options are used.
  * Update README: add note about scratch files.
+ * Do not attempt to freeze filesystems if virtal machine is in paused state
+ (#166)
+
 
 Version 2.4
 ---------
